Adding better examples

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,17 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title> Blank </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container" class="ion-padding">
+<ion-content
+  class="ion-padding"
+  style="display: flex; flex-direction: column; gap: 16px"
+>
+  <div class="ion-padding">
     <div [formGroup]="form">
       <ion-input
         mode="md"
@@ -57,7 +48,9 @@
         role="textbox"
         aria-label="Enter"
         class="ion-margin-bottom"
-      />
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
       <ion-input
         mode="md"
         color="ref-app-alternative"
@@ -70,7 +63,9 @@
         role="textbox"
         aria-label="Enter"
         class="ion-margin-bottom"
-      />
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
       <ion-input
         mode="md"
         color="ref-app-alternative"
@@ -83,7 +78,9 @@
         role="textbox"
         aria-label="Enter"
         class="ion-margin-bottom"
-      />
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
       <ion-input
         mode="md"
         color="ref-app-alternative"
@@ -96,7 +93,9 @@
         role="textbox"
         aria-label="Enter"
         class="ion-margin-bottom"
-      />
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
       <ion-input
         mode="md"
         color="ref-app-alternative"
@@ -109,7 +108,84 @@
         role="textbox"
         aria-label="Enter"
         class="ion-margin-bottom"
-      />
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
+      <ion-input
+        mode="md"
+        color="ref-app-alternative"
+        type="text"
+        label="Input 6"
+        label-placement="floating"
+        fill="outline"
+        placeholder="Example placeholder"
+        formControlName="input6"
+        role="textbox"
+        aria-label="Enter"
+        class="ion-margin-bottom"
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
+      <ion-input
+        mode="md"
+        color="ref-app-alternative"
+        type="text"
+        label="Input 7"
+        label-placement="floating"
+        fill="outline"
+        placeholder="Example placeholder"
+        formControlName="input7"
+        role="textbox"
+        aria-label="Enter"
+        class="ion-margin-bottom"
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
+      <ion-input
+        mode="md"
+        color="ref-app-alternative"
+        type="text"
+        label="Input 8"
+        label-placement="floating"
+        fill="outline"
+        placeholder="Example placeholder"
+        formControlName="input8"
+        role="textbox"
+        aria-label="Enter"
+        class="ion-margin-bottom"
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
+      <ion-input
+        mode="md"
+        color="ref-app-alternative"
+        type="text"
+        label="Input 9"
+        label-placement="floating"
+        fill="outline"
+        placeholder="Example placeholder"
+        formControlName="input9"
+        role="textbox"
+        aria-label="Enter"
+        class="ion-margin-bottom"
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
+      <ion-input
+        mode="md"
+        color="ref-app-alternative"
+        type="text"
+        label="Input 10"
+        label-placement="floating"
+        fill="outline"
+        placeholder="Example placeholder"
+        formControlName="input10"
+        role="textbox"
+        aria-label="Enter"
+        class="ion-margin-bottom"
+      >
+        <ion-icon slot="start" name="add-circle-outline" aria-hidden="true" />
+      </ion-input>
     </div>
   </div>
 </ion-content>
